Changelog
=========

1.0.5 (unreleased)
------------------

- nothing.

1.0.4 (2015-10-07)
------------------

- add cssselect dependency for people who install lxml > 3
  by mistake on Plone 4.0 and 4.1
  [vangheem]

1.0.3 (2015-10-07)
------------------

- prevent TypeError from occurring when checking commit of
  non-string keys on an OOBTree instance. Fixes #5
  [vangheem]

- Check to see if tinymce ajax is already patched or not.
  This prevents JavaScript recursion error.
  [awello, cekk]


1.0.2 (2015-10-06)
------------------

- use a better guess at if we should rewrite urls
  for zmi
  [vangheem]


1.0.1 (2015-10-06)
------------------

- correctly check for origin header
  [vangheem]

1.0.0 (2015-10-06)
------------------

- initial release