@@ -4,7 +4,10 @@ Changelog
 1.0.5 (unreleased)
 ------------------
 
-- nothing.
+- Handle TypeError caused by getToolByName on an
+  invalid context
+  [vangheem]
+
 
 1.0.4 (2015-10-07)
 ------------------
